work on problems 2 and 3

--- a/Ferguson, Problems Section 3.ipynb
+++ b/Ferguson, Problems Section 3.ipynb
@@ -389,6 +389,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem 14(a)\n",
+    "\n",
+    "Suppose there are 3 posts to capture. Blotto has 4 units and Kije has 3. Solve. (Reduction by inaviarnce leads to a 4 by 3 matrix, reducible further by domination to 2 by 2.)\n",
+    "\n",
+    "------\n",
+    "\n",
+    "*Solution:* With some forethought, we can come up with the invariance mapping without having to write out the entire matrix. We notice that Blotto has the following options, up to a permuation of the posts:\n",
+    "\n",
+    " * Sending all regiments to a single post\n",
+    " * Sending three to one post, 1 to another, and 0 to the third\n",
+    " * Sending 2 regiments each to 2 posts and none to the third\n",
+    " * Sending 2 regiments to one post, and one each to the remaining 2\n",
+    "\n",
+    "Kije's strategies can be group similarly:\n",
+    "\n",
+    " * Sending all three regiments to a single post\n",
+    " * Sending two regiments to a single post, a regiment to another post, and none to the third\n",
+    " * Sending one regiment to each post\n",
+    " \n",
+    "What we desire from $g$ and $\\overline{g}$ is a reflection of this symmetry. Specifically, before and after $g$ (or $\\overline{g}$), we want to make sure that the same number of regiments are meeting in contest (although perhaps at different posts.)\n",
+    "\n",
+    "As we proceed, it will be helpful to note that a number of each of Blotto's and Kije's strategies have some element of symmetry within them; i.e., the three (up to permutation) strategies $\\{(0,4,0), (2,0,2),(1,2,1)\\}$ (for Blotto) and $\\{(0,2,0)\\}$ are each of the form \"Send an equal number of regiments to two posts, and a different number to the third.\" This is critical, since each of Blotto and Kije also have a *single* stratgey (up to permutation) that send a different number of regiments to each post, namely the respective strategies of $(3,1,0)$ and  $(2,1,0)$. \n",
+    "\n",
+    "What we need from $g$ and $\\overline{g}$, then, is to match the asymmetry of the latter strategies to the symmetries of the former.\n",
+    "\n",
+    "We let $g$  be the mappings\n",
+    "\n",
+    " * $(4,0,0) \\stackrel{g}{\\to} (0,4,0) \\stackrel{g}{\\to} (0,0,4) \\stackrel{g}{\\to} (4,0,0)$\n",
+    " * $(0,2,2) \\stackrel{g}{\\to} (0,2,2) \\stackrel{g}{\\to} (2,0,2) \\stackrel{g}{\\to} (2,2,0)$\n",
+    " * $(2,1,1) \\stackrel{g}{\\to} (1,2,1) \\stackrel{g}{\\to} (1,1,2) \\stackrel{g}{\\to} (2,1,1)$\n",
+    " * $(3,1,0) \\stackrel{g}{\\to} (0,3,1) \\stackrel{g}{\\to} (1,0,3) \\stackrel{g}{\\to} (3,0,1) \\stackrel{g}{\\to} (1,3,0) \\stackrel{g}{\\to} (0,1,3) \\stackrel{g}{\\to} (3,1,0)$\n",
+    " \n",
+    " and $\\overline{g}$ be the mappings\n",
+    " \n",
+    " * $(3,0,0) \\stackrel{\\overline{g}}{\\to} (0,3,0) \\stackrel{\\overline{g}}{\\to} (0,0,3) \\stackrel{\\overline{g}}{\\to} (3,0,0)$\n",
+    " * $(2,1,0) \\stackrel{\\overline{g}}{\\to} (0,2,1) \\stackrel{\\overline{g}}{\\to} (1,0,2) \\stackrel{\\overline{g}}{\\to} (2,0,1) \\stackrel{\\overline{g}}{\\to} (1,2,0) \\stackrel{\\overline{g}}{\\to} (0,1,2) \\stackrel{\\overline{g}}{\\to} (2,1,0)$\n",
+    " * $(1,1,1) \\stackrel{\\overline{g}}{\\to} (1,1,1)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examination shows that each element of $X$ and $Y$ has order 3, except (1,1,1) which has order 1. Since both $g$ and $\\overline{g}$ came from starting at an initial strategy and \"rotating\" the positions, we can note that the same number of troops will meet (but at a different post) both before and after the application of function.\n",
+    "\n",
+    "Explicitly, $g$ and $\\overline{g}$ are a 6-cycles that take \n",
+    "\n",
+    "$$(a,b,c) \\to (c,a,b) \\to (b,c,a) \\to (a,c,b) \\to (b,a,c) \\to (c,b,a) \\to (a,b,c).$$\n",
+    "\n",
+    "But since some elements of $X$ and $Y$ are of the form $(a,b,b)$ or $(a,a,a)$, they form three and one cycles instead; and yet retain their compatibility with the 6 cycles.\n",
+    "\n",
+    "The strategies become $X^*$, which contains\n",
+    "\n",
+    " * $(4,0,0)^*,$ the strategies in the orbit of $(4,0,0)$, each with probability 1/3\n",
+    " * $(0,2,2)^*,$ the strategies in the orbit of $(0,2,2)$, each with probability 1/3\n",
+    " * $(2,1,1)^*,$ the strategies in the orbit of $(2,1,1)$, each with probability 1/3\n",
+    " * $(3,1,0)^*,$ the strategies in the orbit of $(3,1,0)$ each with probability 1/6\n",
+    " \n",
+    " and $Y^*$, which contains\n",
+    " \n",
+    " * $(3,0,0)^*$, the strategies in the orbit of $(3,0,0)$ each with probability 1/3\n",
+    " * $(2,1,0)^*$, the strategies in the orbit of $(2,1,0)$ each with probability 1/6\n",
+    " * $(1,1,1)$.\n",
+    " \n",
+    "The calculations to derive the entries in the following table are tedious. As an example, if a strategy in $(4,0,0)^*$ is matched with a strategy in $(3,0,0)^*$, we have that the matching will be of the form\n",
+    "\n",
+    " * $(4,0,0) vs (3,0,0),$ payoff 4\n",
+    " * $(4,0,0) vs (0,3,0),$ payoff 0\n",
+    " * $(4,0,0) vs (0,0,3) $ payoff 0\n",
+    " \n",
+    "up to the ordering of the posts. Hence, the average payoff will be $4/3.$\n",
+    " \n",
+    " \n",
+    "```\n",
+    "|             | (3,0,0)*    | (2,1,0)*    | (1,1,1)*    |\n",
+    "|-------------|-------------|-------------|-------------|\n",
+    "|  (4,0,0)*   | 4/3         | 2/3         | 0           |\n",
+    "|  (0,2,2)*   | -1          | 4/3         | 3           |\n",
+    "|  (2,1,1)*   | -1/3        | 1/3         | 2           |\n",
+    "|  (3,1,0)*   | 1/3         | 1           | 1           |\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finish doing this by domination and thm 3.2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -412,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
